--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#skills">Skills</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://avatars3.githubusercontent.com/u/13001055?v=3&amp;s=300" alt="">
+                    <img class="img-responsive" src="https://avatars3.githubusercontent.com/u/13001055?v=3&amp;s=300" alt="profile picture from github, a fighter jet">
                     <div class="intro-text">
                         <span class="name">Charles Bailey</span>
                         <hr class="star-light">
@@ -86,7 +86,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -102,7 +102,7 @@
                                 <p>Over one year of C++ experience</p>
                             </div>
                         </div>
-                        <img src="img/portfolio/cplusplus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/cplusplus.png" class="img-responsive" alt="c++">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -112,7 +112,7 @@
                                 <p>Eight months of Ruby programming experience</p>
                             </div>
                         </div>
-                        <img src="img/portfolio/ruby.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/ruby.png" class="img-responsive" alt="ruby">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -122,7 +122,7 @@
                                 <p>Working experience with HTML and CSS</p>
                             </div>
                         </div>
-                        <img src="img/portfolio/html5.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/html5.png" class="img-responsive" alt="html5">
                     </a>
                 </div>
                 <!-- <div class="col-sm-4 portfolio-item">
@@ -170,7 +170,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Experience in C++, Ruby, HTML and CSS</p>
+                    <p>Currently a high school student willing to code for money. Will learn new programming skills if asked/needed to.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Refer to <a style="color: #ff5733; text-decoration: none;" href="https://github.com/c650">Github</a> for sample code.</p>
@@ -180,7 +180,7 @@
     </section>
 
     <!-- Contact Section -->
-    <!-- <section id="contact">
+    <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -189,10 +189,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2"> -->
+                <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <!-- <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
@@ -232,7 +232,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer class="text-center">
@@ -247,19 +247,13 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.youtube.com/channel/UC0KtS8gCGfYhB_fVOpFW4jQ" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://plus.google.com/105890882785210317598/videos" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://stackoverflow.com/users/5042431/c650" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
                             </li>
                         </ul>
                     </div>
