--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#contact">Contact Me</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="https://github.com/c650">Github</a>
                     </li>
                 </ul>
