--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="personal website and resume">
+    <meta name="author" content="Charles Bailey">
 
     <title>Charles Bailey</title>
 
+    <!--link to the title icon -->
+    <link rel="icon" type="image/gif" href="http://www.drodd.com/images12/computer-icon39.ico">
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -173,10 +175,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Currently a high school student willing to code for money. Will learn new programming skills if asked/needed to.</p>
+                    <p>Currently a high school student willing to code for money. Will learn new programming skills if asked/needed. Currently best at C++ and Ruby, with an emphasis on back-end programming and algorithms.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Refer to <a style="color: #ff5733; text-decoration: none;" href="https://github.com/c650">Github</a> for sample code.</p>
+                    <p>
+                        Have worked on several projects including <a class="about-link" href="http://linefree.herokuapp.com/">linefree</a>. 
+                        Over 140 reputation on <a class="about-link" href="http://stackoverflow.com">Stack Overflow</a>.Refer to <a class="about-link" href="https://github.com/c650">Github</a> for sample code.
+                    </p>
                 </div>
             </div>
         </div>
