--- a/index.html
+++ b/index.html
@@ -174,14 +174,31 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-4 col-lg-offset-1">
                     <p>Currently a high school student willing to code for money. Will learn new programming skills if asked/needed. Currently best at C++ and Ruby, with an emphasis on back-end programming and algorithms.</p>
+                    
+                    <br>
+
+                    <h4>Current Certifications:</h4>
+                    <ul>
+                        <li><a href="http://flatironschool.com/">Flatiron School</a> Certified Software Engineer</li>
+                    </ul>
                 </div>
                 <div class="col-lg-4">
                     <p>
                         Have worked on several projects including <a class="about-link" href="http://linefree.herokuapp.com/">linefree</a>. 
                         Over 140 reputation on <a class="about-link" href="http://stackoverflow.com">Stack Overflow</a>. Refer to <a class="about-link" href="https://github.com/c650">Github</a> for sample code.
                     </p>
+                    <p>Fluent in English; Five years of Mandarin Chinese experience.</p>
+                </div>
+                <div class="col-lg-3">
+                    <h4>Leadership Positions</h4>
+                    <ul>
+                        <li>President of Investment Club, 2014-present</li>
+                        <li>Founding President of Programming Club, 2015-present</li>
+                        <li>Treasurer of Mu Alpha Theta, 2015-present</li>
+                        <li>Class Treasurer, 2013-2014</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -262,6 +279,9 @@
                             </li>
                             <li>
                                 <a href="https://stackoverflow.com/users/5042431/c650" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/c650" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
