--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
                             <li>
                                 <a href="https://github.com/c650" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/charles-b-85a309121?trk=nav_responsive_tab_profile" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <!-- <div class="footer-col col-md-4">
