--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-1">
-                    <p>Currently a high school student willing to code for money. Will learn new programming skills if asked/needed. Currently best at C++ and Ruby, with an emphasis on back-end programming and algorithms.</p>
+                    <p>Currently a high school student. I have experience with C, C++, and Ruby, with an emphasis on back-end programming and algorithms.</p>
                     <p>I am also interested in Networking and Cyber Security.</p>
                     <br>
 
@@ -197,9 +197,8 @@
                 <div class="col-lg-4">
                     <p>
                         Have worked on several projects including <a class="about-link" href="http://linefree.herokuapp.com/">linefree</a>. 
-                        Over 140 reputation on <a class="about-link" href="http://stackoverflow.com">Stack Overflow</a>. Refer to <a class="about-link" href="https://github.com/c650">Github</a> for sample code.
+                        Over 300 reputation on <a class="about-link" href="http://stackoverflow.com">Stack Overflow</a>. Refer to <a class="about-link" href="https://github.com/c650">Github</a> for sample code.
                     </p>
-                    <p>Fluent in English; Five years of Mandarin Chinese experience.</p>
                 </div>
                 <div class="col-lg-3">
                     <h4>Leadership Positions</h4>
@@ -275,8 +274,6 @@
                     <div class="footer-col col-md-6">
                         <h3>Location</h3>
                         <p>Miami, FL</p>
-                        <h3>Email</h3>
-                        <a href="mailto:charlesbailey@protonmail.com" target="_top">charlesbailey@protonmail.com</a>
                     </div>
                     <div class="footer-col col-md-6">
                         <h3>Social Media Links</h3>
