--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-1">
-                    <p>Currently a high school student. I have experience with C, C++, and Ruby, with an emphasis on back-end programming and algorithms.</p>
+                    <p>Currently a college student at the University of Central Florida. I have experience with C, C++, and Ruby, with an emphasis on back-end programming and algorithms.</p>
                     <p>I am also interested in Networking and Cyber Security.</p>
                     <br>
 
