make a specific change about leadership

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
                 <div class="col-lg-3">
                     <h4>Leadership Positions</h4>
                     <ul>
-                        <li>President of Investment Club, 2014-2017</li>
-                        <li>Founding President of Programming Club, 2015-2017</li>
-                        <li>Treasurer of Mu Alpha Theta, 2015-2016; President, 2016-2017</li>
-                        <li>Class Treasurer, 2013-2014</li>
+                        <li>President of <strong>High School</strong> Investment Club, 2014-2017</li>
+                        <li>Founding President of <strong>High School</strong> Programming Club, 2015-2017</li>
+                        <li>(<strong>High School</strong>) Treasurer of Mu Alpha Theta, 2015-2016; President, 2016-2017</li>
+                        <li>(<strong>High School</strong>) Class Treasurer, 2013-2014</li>
                     </ul>
                 </div>
             </div>
